password hashing now working